--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        //WristbandData_________
+
+        <TextView
+            android:id="@+id/mainResultTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+
+        <ListView
+            android:id="@+id/mainListView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        //WristbandData_________
+
     </LinearLayout>
 
 
